Warehouse/kube/service-dt-ware.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service-8082
spec:
  selector:
    app: myapp-8082
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
