Warehouse/kube/ingress-dt-ware.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress-8082
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /ware
            pathType: Prefix
            backend:
              service:
                name: myapp-service-8082
                port:
                  number: 8082
